# clickr

./: .gitignore  Cargo.toml  README.md
examples/: ex1.rs
src/: client.rs  insert.rs  inserter.rs  lib.rs  options.rs  reader.rs  response.rs
src/db/: clickhouse.rs  mod.rs
