[package]
name = "clickr"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version="2", features = ["json"]}
bytes = "1"
thiserror = "1"
url = "2.2"
serde_json = "*"
