[package]
name = "clickr"
version = "0.2.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4"
bytes = "1"
thiserror = "1"
url = "2.2"
rustls = "0.20"
webpki-roots = "0.22.3"
rustls-native-certs = "0.6"
